test/org/midica/testfiles/failing/oto-at-end-of-block.midica
INCLUDE inc/instruments.midica

1: c
{
	1: c
	{
		1: d e (m)
	}
	1: f
}
1: g
